# qa_guru_advanced

./: .env.sample  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test.yml
app/: main.py
app/database/: engine.py  users.py
app/models/: AppStatus.py  User.py
app/routers/: status.py  users.py
models/: AppStatus.py  Pagination.py
tests/: api_client.py  conftest.py  test_api.py  test_smoke.py
utils/: base_session.py
