[project]
name = "qa-guru-advanced"
version = "0.1.0"
description = ""
authors = [
    {name = "Kirill",email = "ryabtsev231297@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"


[tool.poetry.dependencies]
fastapi = "^0.120.1"
pydantic = "^2.12.3"
requests = "^2.32.5"
uvicorn = "^0.38.0"
pytest = "^8.4.2"
python-dotenv = "^1.2.1"
fastapi-pagination = "^0.14.3"
email-validator = "^2.3.0"


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
